# uni-perftools

./: .gitignore  CLAUDE.md  Makefile  README.md  SUITE_PLAN.md
.github/workflows/: ci.yml  hwpc-validate.yml
collectors/profile/: .gitignore  Makefile  README.md
collectors/snapshot/: .gitignore  CLAUDE.md  Cargo.toml  README.md
collectors/snapshot/crates/uaps-cli/: Cargo.toml  build.rs
collectors/snapshot/crates/uaps-cli/src/: aggregate.rs  main.rs  net.rs
collectors/snapshot/crates/uaps-collect/: Cargo.toml
collectors/snapshot/crates/uaps-collect/src/: cpu.rs  elapsed.rs  fallback.rs  gpu.rs  lib.rs  mpi.rs  omp.rs  perf.rs  pmu.rs  pmudb.rs  proc.rs  raw_pmu.rs  sw.rs  threads.rs  topdown.rs
collectors/snapshot/crates/uaps-core/: Cargo.toml
collectors/snapshot/crates/uaps-core/src/: collector.rs  derive.rs  insights.rs  lib.rs  metric.rs
collectors/snapshot/crates/uaps-report/: Cargo.toml
collectors/snapshot/crates/uaps-report/src/: lib.rs
collectors/snapshot/pmu-events/: PROVENANCE.txt
collectors/snapshot/shim/mpi/: uaps_mpi.c
collectors/snapshot/testbench/: Makefile  compute_bound.c  flops_simd.c  io_bound.c  memory_bound.c  mpi_ring.c  mpi_ring.py  omp_bound.c  threaded.c
core/analysis/: htmlrep.py  insights.py  report.py  scaling.py  viewpoints.py
core/cli/: perfsuite  upat
core/contract/: SCHEMA.md  contract.py
core/roofline/: calibrate.c  roofline.py
docs/: ARCHITECTURE.md
src/analyzers/: analyzer.h  blas.c  heap.c  mpi.c
src/backends/: frida.c
src/core/: config.c  config.h  emit.c  libprof.c  libprof.h  (+5 more)
tests/: roofline_bench.c  run.sh
tools/: scilib-report.py
(+65 files in other folders)
